# gb-emu

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  catridge.hpp  cpu.hpp  flake.nix  main.cpp  shell.nix
core/: CMakeLists.txt  bus.hpp  common.hpp  config.hpp  emulator.cpp  emulator.hpp  gameboy.cpp  gameboy.hpp  joypad.hpp  memory.hpp  platform.hpp  timer.hpp
core/audio/: apu.hpp  channel1.hpp  channel4.hpp  ringbuffer.hpp
core/cartridge/: cartridge.cpp  cartridge.hpp  mbc1.hpp  no_mbc.hpp
core/cpu/: cpu.hpp
core/graphics/: background_fifo.hpp  lcd.hpp  ppu.cpp  ppu.hpp  sprite_fifo.hpp
platform/: CMakeLists.txt
platform/gtk/: CMakeLists.txt  gtk.cpp  gtk.hpp  gtk_config.hpp  main.cpp  opengl.hpp  portaudio_subsystem.hpp  preferences_window.cpp  preferences_window.hpp  setup.cpp  utils.hpp  window.cpp
platform/gtk/backends/audio/: audio_backend.hpp  portaudio.hpp  sdl2.hpp
platform/gtk/backends/video/: opengl.hpp  software.hpp  video_backend.hpp
platform/gtk/menu_bar/: menu_bar.hpp
platform/gtk/menu_bar/file/: file.cpp  file.hpp
platform/gtk/subsystems/: opengl.hpp  portaudio.hpp
platform/headless/: CMakeLists.txt  headless.cpp  headless.hpp
platform/sdl2/: CMakeLists.txt  sdl2.cpp  sdl2.hpp
src/: alu.hpp  apu.hpp  bus.cpp  bus.hpp  cartridge.hpp  catridge.hpp  channel1.hpp  channel2.hpp  channel4.hpp  common.hpp  config.hpp  cpu.cpp  cpu.hpp  cpu_cb_instructions.cpp  cpu_instructions.cpp  cpu_instructions.hpp  emulator.cpp  gameboy.cpp  gameboy.hpp  joypad.hpp  lfsr.hpp  main.cpp  memory.cpp  memory.hpp  platform.hpp  ppu.cpp  ppu.hpp  timer.cpp  timer.hpp
src/audio/: apu.hpp  channel1.hpp  channel2.hpp  channel3.hpp  ringbuffer.hpp
src/cartridge/: cartridge.cpp  cartridge.hpp  no_mbc.hpp
src/cpu/: cpu.hpp  cpu_cb_instructions.cpp  cpu_instructions.cpp
src/graphics/: background_fifo.hpp  lcd.hpp  ppu.cpp  ppu.hpp  sprite_fifo.hpp
zirc/: CMakeLists.txt  bus.cpp  bus.hpp  common.hpp  config.cpp  config.hpp  gameboy.cpp  gameboy.hpp  joypad.hpp  memory.cpp  memory.hpp  platform.hpp  timer.cpp  timer.hpp
zirc/audio/: apu.hpp  channel1.hpp  channel2.hpp  channel3.hpp  channel4.hpp  lfsr.hpp  ringbuffer.hpp
zirc/cartridge/: cartridge.cpp  cartridge.hpp  mbc1.hpp  no_mbc.hpp
zirc/cpu/: alu.hpp  cpu.cpp  cpu.hpp  cpu_cb_instructions.cpp  cpu_instructions.cpp
zirc/graphics/: background_fifo.hpp  lcd.hpp  ppu.cpp  ppu.hpp  sprite_fifo.hpp
